--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title id='title'>Fresher</title>
+    <title id='title'>CNPM</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, minimum-scale=1, maximum-scale=1" />
-   <meta id="description" name="description" content="Fresher Training" />
-    <meta name="keywords" content="Fresher" />
+   <meta id="description" name="description" content="CNPM" />
+    <meta name="keywords" content="CNPM" />
     <meta name="doc-type" content="Web Page" />
     <meta name="robots" content="index, follow" />
     <meta name="resource-type" content="document" />
